@@ -1,3 +1,6 @@
+Changelog 0.3.75 [20230520]:
+- Added enime stream sources as fallback
+
 Changelog 0.3.74 [20230519]:
 - Improved Skip Intro
 
